[package]
name = "toob"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-broadcast = "0.7.2"
async-channel = "2.3.1"
bytes = "1.10.1"
bytes-varint = "1.1.0"
clap = "4.5.38"
futures-lite = "2.6.0"
glommio = "0.9.0"
oneshot = "0.1.11"
prost = "0.13.5"
prost-types = "0.13.5"
snafu = "0.8.5"
thiserror = "2.0.12"

[build-dependencies]
prost-build = "0.13.5"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"
